# LearnOpenCV

./: CMakeLists.txt  ShowCalcHist.cpp  ShowEqualize.cpp  main.cpp
